# project_drf

./:  .env.sample  .env  bd.json  coverage_report.txt  pyproject.toml  user.json
lms/: models.py  paginators.py  serializers.py  tasks.py  tests.py  urls.py  validators.py  views.py
lms/migrations/: 0001_initial.py  0002_alter_lesson_course.py  0003_course_owner_lesson_owner.py  0004_subscription.py
myproject/: celery.py  settings.py  urls.py
user/: admin.py  models.py  permissions.py  serializers.py  services.py  tasks.py  urls.py  views.py
user/management/commands/: csu.py
user/migrations/: 0001_initial.py  0002_payments_date_payment.py
